--- a/src/views/signup/index.ejs
+++ b/src/views/signup/index.ejs
@@ -1,36 +1,46 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>SignUp</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div class="container w-25 mt-5">
-        <h1>Login</h1>
-
-        <form action="/auth" method="post">
+        <h1>SignUp</h1>
+    
+        <form action="/register" method="post">
             <div class="mb-3">
                 <label for="exampleInputUsername" class="form-label">User Name</label>
     
-                <input type="text" name="username" class="form-control" id="exampleInputUsername" aria-describedby="usernameHelp">
+                <input type="text" name="username" class="form-control" id="exampleInputUsername"
+                    aria-describedby="usernameHelp">
             </div>
-            
+    
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Password</label>
-                
+    
                 <input type="password" name="password" class="form-control" id="exampleInputPassword1">
             </div>
+    
+            <div class="mb-3">
+                <label for="exampleInputName" class="form-label">Name</label>
+    
+                <input type="text" name="name" class="form-control" id="exampleInputName" aria-describedby="nameHelp">
+            </div>
+    
+            <button type="submit" class="btn btn-primary">Crear Cuenta</button>
 
-            <button type="submit" class="btn btn-primary">Iniciar Sesion</button>
-
-            <a href="/signup" class="link-primary">Sign Up</a>
+            <a href="/login" class="link-primary">Login</a>
         </form>
     </div>
 </body>
+
 </html>
