--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Home - <%= user.name %></title>
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://localhost:3000/estilos/main.css">
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <style>
+        body {
+            background-color: rgba(157, 180, 202, 0.658);
+        }
+        .photo {
+        }
+    </style>
 </head>
 <body>
     <%- include("../layout/navbar") %>
@@ -19,11 +25,13 @@
     <h1>Hola, <%= user.name %></h1>
 
     <form action="/upload" method="post" enctype="multipart/form-data">
-        <input type="file" multiple name="photos" id="fileInput" class="d-none">
+        <input type="file" name="photos" id="fileInput" class="">
         
         <input type="button" id="bPick" value="Elegir fotos" class="btn btn-primary p-2">
 
         <input type="submit" id="bPick" value="Subir fotos" class="btn btn-primary p-2">
     </form>
+
+    <%- include("../layout/photos") %>
 </body>
 </html>
