Un poco de diseño

--- a/src/views/layout/photos.ejs
+++ b/src/views/layout/photos.ejs
@@ -1,4 +1,4 @@
-<div class="photos container-fluid d-flex flex-wrap gap-1">
+<div class="photos">
 
     <% photos.forEach(photo=> { %>
         <div class="photo">
