--- a/src/views/layout/navbar.ejs
+++ b/src/views/layout/navbar.ejs
@@ -1,21 +1,115 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Photos</a>
+<style>
+    * {
+        box-sizing: border-box;
+    }
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    body {
+        margin: 0px;
+        font-family: 'segoe ui';
+    }
 
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
+    .nav {
+        height: 50px;
+        width: 100%;
+        background-color: inherit;
+        /* position: relative; */
+    }
 
-                <li class="nav-item">
-                    <a class="nav-link" href="/albums">Albums</a>
-                </li>
-            </ul>
-        </div>
+    .nav > .nav-header {
+        display: inline;
+    }
+    /* > .nav-header */
+    .nav > .nav-title {
+        display: inline-block;
+        font-size: 22px;
+        padding: 10px 10px 10px 10px;
+    }
+
+    .nav > .nav-btn {
+        /* display: none; */
+    }
+
+    .nav > .nav-links {
+        display: inline;
+        float: right;
+        font-size: 18px;
+    }
+
+    .nav > .nav-links > a {
+        display: inline-block;
+        padding: 13px 10px 13px 10px;
+        text-decoration: none;
+    }
+
+    .nav > .nav-links > a:hover {
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+
+    .nav > #nav-check {
+        display: none;
+    }
+
+    @media (max-width:600px) {
+        .nav > .nav-btn {
+            display: inline-block;
+            position: absolute;
+            right: 0px;
+            top: 0px;
+        }
+        .nav > .nav-btn > label {
+            display: inline-block;
+            width: 50px;
+            height: 100%;
+            padding: 13px;
+        }
+        .nav > .nav-btn > label > span {
+            display: block;
+            width: 25px;
+            height: 10px;
+            border-top: 2px solid rgb(148, 1, 1);
+        }
+        .nav > .nav-links {
+            position: absolute;
+            display: block;
+            width: 100%;
+            background-color: inherit;
+            height: 0px;
+            transition: all 0.3s ease-in;
+            overflow-y: hidden;
+            top: 50px;
+            left: 0px;
+        }
+        .nav > .nav-links > a {
+            display: block;
+            width: 100%;
+        }
+        .nav > #nav-check:not(:checked) ~ .nav-links {
+            height: 0px;
+        }
+        .nav > #nav-check:checked ~ .nav-links {
+            height: calc(100vh - 50px);
+            overflow-y: auto;
+        }
+    }
+</style>
+
+<nav class="nav">
+    <input type="checkbox" id="nav-check">
+    <div class="nav-header"></div>
+    <div class="nav-title">
+        Photos
+    </div>
+    
+    <button class="nav-btn">
+        <label for="nav-check">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
+    </button>
+    
+    <div class="nav-links">
+        <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link" href="/albums">Albums</a>
     </div>
 </nav>
