--- a/src/views/layout/navbar.ejs
+++ b/src/views/layout/navbar.ejs
@@ -1,6 +1,6 @@
 <style>
     * {
-        box-sizing: border-box;
+        /* box-sizing: border-box; */
     }
 
     body {
@@ -26,7 +26,7 @@
     }
 
     .nav > .nav-btn {
-        /* display: none; */
+        display: none;
     }
 
     .nav > .nav-links {
@@ -42,7 +42,7 @@
     }
 
     .nav > .nav-links > a:hover {
-        background-color: rgba(0, 0, 0, 0.3);
+        background-color: rgba(187, 22, 22, 0.801);
     }
 
     .nav > #nav-check {
@@ -50,29 +50,37 @@
     }
 
     @media (max-width:600px) {
+        .nav {
+            display: flex;
+            justify-content: space-between;
+        }
         .nav > .nav-btn {
-            display: inline-block;
-            position: absolute;
-            right: 0px;
-            top: 0px;
+            display: block;
+            max-width: 50px;
+            width: 25vw;
+            height: 100%;
+            padding: 0;
         }
         .nav > .nav-btn > label {
-            display: inline-block;
-            width: 50px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
+            width: 100%;
             height: 100%;
-            padding: 13px;
+            /* padding: 13px; */
         }
         .nav > .nav-btn > label > span {
             display: block;
-            width: 25px;
-            height: 10px;
-            border-top: 2px solid rgb(148, 1, 1);
+            width: 80%;
+            height: 5px;
+            background-color: rgb(148, 1, 1);
         }
         .nav > .nav-links {
             position: absolute;
             display: block;
             width: 100%;
-            background-color: inherit;
+            background-color: rgba(168, 60, 60, 0.781);
             height: 0px;
             transition: all 0.3s ease-in;
             overflow-y: hidden;
@@ -82,6 +90,8 @@
         .nav > .nav-links > a {
             display: block;
             width: 100%;
+            color: rgb(1, 6, 39);
+            text-align: center;
         }
         .nav > #nav-check:not(:checked) ~ .nav-links {
             height: 0px;
@@ -94,11 +104,11 @@
 </style>
 
 <nav class="nav">
-    <input type="checkbox" id="nav-check">
-    <div class="nav-header"></div>
     <div class="nav-title">
         Photos
     </div>
+    <input type="checkbox" id="nav-check">
+    <div class="nav-header"></div>
     
     <button class="nav-btn">
         <label for="nav-check">
