--- a/src/views/albums/index.ejs
+++ b/src/views/albums/index.ejs
@@ -12,7 +12,7 @@
     <form action="/create-album" method="post">
         <input type="text" name="name" placeholder="Album name">
 
-        <input type="checkbox" name="isprivate" checked>Private Album
+        <input type="checkbox" name="isPrivate" checked>Private Album
 
         <input type="submit" value="Create">
     </form>
