--- a/src/views/layout/navbar.ejs
+++ b/src/views/layout/navbar.ejs
@@ -119,7 +119,7 @@
     </button>
     
     <div class="nav-links">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link active" aria-current="page" href="/home">Home</a>
         <a class="nav-link" href="/albums">Albums</a>
     </div>
 </nav>
