--- a/src/views/layout/albums.ejs
+++ b/src/views/layout/albums.ejs
@@ -1,4 +1,7 @@
 <style>
+    p {
+        width: min-content;
+    }
     .albums {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -8,7 +11,7 @@
 
     .album {
         width: max-content;
-        height: 45px;
+        height: min-content;
         border: 1px solid black;
     }
 </style>
