Se pudo agregar albums a las photos :)

--- a/src/views/layout/photos.ejs
+++ b/src/views/layout/photos.ejs
@@ -98,7 +98,7 @@
 
                 const ids = [...cb].map(c => c.value);
 
-                document.querySelector("input[name=`ids`]").value = ids.join(",");
+                document.querySelector(`input[name="ids"]`).value = ids.join(",");
                 
                 document.getElementById("add-album").style.display = "block";
             }else{
