--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -20,6 +20,6 @@
         <input type="submit" id="bPick" value="Subir fotos" class="btn btn-primary p-2">
     </form>
 
-    <%- include("../layout/photos") %>
+    <%- include("../layout/photos", {photos: photos, origin: "/home"}) %>
 </body>
 </html>
