--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - <%= user.name %></title>
-    <link rel="stylesheet" href="https://localhost:3000/estilos/main.css">
+    <!-- <link rel="stylesheet" href="https://localhost:3000/estilos/main.css"> -->
 </head>
 <body>
     <%- include("../layout/navbar") %>
